--- a/Tutorial.Web/Views/Home/Create.cshtml
+++ b/Tutorial.Web/Views/Home/Create.cshtml
@@ -1,15 +1,34 @@
-﻿@using Tutorial.Web.Model;
-@model Student
+﻿@using Tutorial.Web.ViewModel;
+@using Tutorial.Web.Model;
+@model StudentCreateViewModel
 
 <h1>创建学生</h1>
 
 <form method="post">
 
-    <input asp-for="FirstName" />
-    <input asp-for="LastName" />
-    <input asp-for="BirthDate" type="date" />
-    <select asp-for="Gender" asp-items="Html.GetEnumSelectList<Gender>()">
-       
-    </select>
+    <div>
+        <label asp-for="FirstName"></label>
+        <input asp-for="FirstName" />
+        <span asp-validation-for="FirstName"></span>
+    </div>
+    
+    <div>
+        <label asp-for="LastName"></label>
+        <input asp-for="LastName" />
+        <span asp-validation-for="LastName"></span>
+    </div>
+    
+    <div>
+        <label asp-for="BirthDate"></label>
+        <input asp-for="BirthDate" type="date" />
+        <span asp-validation-for="BirthDate"></span>
+    </div>
+    <div>
+        <label asp-for="Gender"></label>
+        <select asp-for="Gender" asp-items="Html.GetEnumSelectList<Gender>()"></select>
+    </div>
+    <div asp-validation-summary="ModelOnly">
+
+    </div>
     <button type="submit" name="save">保存</button>
 </form>
