--- a/Tutorial.Web/Views/Home/Index.cshtml
+++ b/Tutorial.Web/Views/Home/Index.cshtml
@@ -1,28 +1,18 @@
-﻿@model Tutorial.Web.ViewModel.HomeIndexViewModel
+﻿@model HomeIndexViewModel
 @{
-    Layout = null;
+    ViewBag.Title = "Home Index";
+    
 }
 
-<!DOCTYPE html>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Hello From Index.cshtml</title>
-</head>
-<body>
-    <h1>Student</h1>
-    <ul>
-        @foreach(var s in Model.Students)
-        {
-            <li>@s.Name (@s.Age) @*<a href="home/detail/@s.Id">Detail</a>*@
-                @Html.ActionLink("明细", "detail", new { id = s.Id })
-                <a asp-action="Detail" asp-route-id="@s.Id">明细 tag</a>
-            </li>
-        }
-    </ul>
+<h1>Student</h1>
+<partial name="_StudentTable" for="@Model.Students" />
+
+
+@section bottom{
     <div>
         <a asp-action="Create">创建学生</a>
     </div>
-</body>
-</html>
+}
+
+
