--- a/Tutorial.Web/Views/_ViewImports.cshtml
+++ b/Tutorial.Web/Views/_ViewImports.cshtml
@@ -1,1 +1,4 @@
-﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+﻿@using Tutorial.Web.ViewModel;
+@using Tutorial.Web.Model;
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, Tutorial.Web
