--- a/Tutorial.Web/Views/Shared/_Layout.cshtml
+++ b/Tutorial.Web/Views/Shared/_Layout.cshtml
@@ -1,4 +1,7 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Identity
+<!DOCTYPE html>
+
+@inject SignInManager<IdentityUser> SignInManager
 
 <html>
 <head>
@@ -19,7 +22,33 @@
 
 </head>
 <body>
-    <h1>Student</h1>
+    <nav class="navbar navbar-expand-lg navbar-ligth bg-ligth">
+        <a class="navbar-brand" href="/Home/Index">Navbar</a>
+
+        @if (SignInManager.IsSignedIn(User))
+        {
+            <form asp-controller="Account" asp-action="Logout" method="post" id="logoutForm">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item">
+                        <a href="javascript:document.getElementById('logoutForm').submit()">登出</a>
+                    </li>
+                </ul>
+            </form>
+            
+        }
+        else
+        {
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a asp-controller="Account" asp-action="Register">注册</a>
+                </li>
+                <li class="nav-item">
+                    <a asp-controller="Account" asp-action="Login">登录</a>
+                </li>
+            </ul>
+         }
+       
+    </nav>
     <div>
         @RenderBody()
     </div>
