--- a/Heavy.Web/Views/User/EditUser.cshtml
+++ b/Heavy.Web/Views/User/EditUser.cshtml
@@ -1,15 +1,16 @@
 ﻿@using Heavy.Web.ViewModels;
-@model UserAddViewModel
+@model UserUpdateViewModel
 
-@{ 
-    ViewBag.Title = "添加用户";
+@{
+    ViewBag.Title = "编辑用户";
 }
 
-<form asp-action="AddUser" method="post">
+<form asp-action="EditUser" method="post">
+    <input type="hidden" asp-for="Id" />
     <div class="form-group row">
         <label asp-for="UserName" class="col-sm-2"></label>
         <div class="col-sm-10">
-            <input class="form-control" asp-for="UserName" />
+            <input class="form-control" readonly="readonly" asp-for="UserName" />
             <span class="invalid" asp-validation-for="UserName"></span>
         </div>
     </div>
@@ -20,13 +21,7 @@
             <span class="invalid" asp-validation-for="Emial"></span>
         </div>
     </div>
-    <div class="form-group row">
-        <label asp-for="Password" class="col-sm-2"></label>
-        <div class="col-sm-10">
-            <input class="form-control" asp-for="Password" />
-            <span class="invalid" asp-validation-for="Password"></span>
-        </div>
-    </div>
+    
     <div class="form-group row">
         <label asp-for="IdCardNo" class="col-sm-2"></label>
         <div class="col-sm-10">
