--- a/Heavy.Web/Views/User/Index.cshtml
+++ b/Heavy.Web/Views/User/Index.cshtml
@@ -7,24 +7,29 @@
             <th scope="col">ID</th>
             <th scope="col">用户名</th>
             <th scope="col">Email</th>
+            <th scope="col">身份证</th>
+            <th scope="col">出生日期</th>
             <th scope="col">操作</th>
         </tr>
     </thead>
     <tbody>
         @foreach (var u in Model)
         {
-            <tr>
-                <td scope="row">@u.Id</td>
-                <td>@u.UserName</td>
-                <td>@u.Email</td>
-                <td>
-                    <a asp-action="EditUser" class="btn" asp-route-id="@u.Id">编辑</a>
-                    <form asp-action="DeleteUser" asp-route-id="@u.Id" method="post">
-                        <button type="submit" class="btn btn-danger" onclick="return confirm('确认删除?')">删除</button>
-                    </form>
+        <tr>
+            <td scope="row">@u.Id</td>
+            <td>@u.UserName</td>
+            <td>@u.Email</td>
+            <td>@u.IdCardNo</td>
+            <td>@u.BirthDate.ToLongDateString()</td>
+            <td>
 
-                </td>
-            </tr>
+                <form asp-action="DeleteUser" asp-route-id="@u.Id" method="post">
+                    <a asp-action="EditUser" asp-route-id="@u.Id" class="btn btn-primary">编辑</a>
+                    <button type="submit" class="btn btn-danger" onclick="return confirm('确认删除?')">删除</button>
+                </form>
+
+            </td>
+        </tr>
         }
 
     </tbody>
