--- a/Heavy.Web/Views/User/EditUser.cshtml
+++ b/Heavy.Web/Views/User/EditUser.cshtml
@@ -41,3 +41,15 @@
     <button type="submit" class="btn btn-primary">提交</button>
     <a asp-action="Index" class="btn btn-secondary">返回列表</a>
 </form>
+
+<hr />
+<h3>用户的Claims</h3>
+<ul>
+    @foreach (var claim in Model.Claims)
+    {
+        <li>@claim</li>
+    }
+
+</ul>
+
+<a asp-action="ManageClaims" asp-route-id="@Model.Id" class="btn btn-primary">管理用户的Claims</a>
