--- a/Heavy.Web/Views/Shared/_Layout.cshtml
+++ b/Heavy.Web/Views/Shared/_Layout.cshtml
@@ -44,7 +44,10 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Index">用户管理</a>
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Role" asp-action="Index">角色管理</a>
                             </div>
-                           
+
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Album" asp-action="Index">Album</a>
                         </li>
                     </ul>
                 </div>
