--- a/Heavy.Web/Views/Home/Index.cshtml
+++ b/Heavy.Web/Views/Home/Index.cshtml
@@ -1,8 +1,20 @@
-﻿@{
+﻿@using Heavy.Web.TagHelpers.Models
+@{
     ViewData["Title"] = "Home Page";
 }
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
+    @*<Email mail-to="Support@contoso.com"></Email>*@
+    <email>Support@contoso.com</email>
+    <div>
+        @*<bold color="green">这是一个粗字体吗?</bold>*@
+        <p bold my-style="@(new MyStyle {
+                          Color ="red",
+                          FontFamily = "SimHei",
+                          FontSize = 30
+                      })">应该是一个粗字体</p>
+    </div>
+
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
